feat(search): add exchange search filters
