# docs/swagger/swagger.json
@@ -4303,6 +4303,9 @@
                         "/uploads/8db9f3e2-8a45-4a70-b3d1-167b4f97e121.jpg"
                     ]
                 },
+                "search_filters": {
+                    "$ref": "#/definitions/dto.SearchFiltersRequest"
+                },
                 "title": {
                     "type": "string",
                     "example": "Велосипед"
@@ -4529,6 +4532,9 @@
                         }
                     ],
                     "x-nullable": true
+                },
+                "search_filters": {
+                    "$ref": "#/definitions/dto.SearchFiltersResponse"
                 },
                 "status": {
                     "type": "string"
@@ -4887,6 +4893,41 @@
                 }
             }
         },
+        "dto.SearchFiltersRequest": {
+            "type": "object",
+            "properties": {
+                "max_chain_length": {
+                    "type": "integer",
+                    "maximum": 5,
+                    "minimum": 2,
+                    "example": 3
+                },
+                "min_participant_rating": {
+                    "type": "number",
+                    "maximum": 5,
+                    "minimum": 0,
+                    "example": 4
+                },
+                "prefer_reliable_participants": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "dto.SearchFiltersResponse": {
+            "type": "object",
+            "properties": {
+                "max_chain_length": {
+                    "type": "integer"
+                },
+                "min_participant_rating": {
+                    "type": "number"
+                },
+                "prefer_reliable_participants": {
+                    "type": "boolean"
+                }
+            }
+        },
         "dto.SetPickupPointRequest": {
             "type": "object",
             "properties": {
@@ -4967,6 +5008,9 @@
                     "example": [
                         "/uploads/8db9f3e2-8a45-4a70-b3d1-167b4f97e121.jpg"
                     ]
+                },
+                "search_filters": {
+                    "$ref": "#/definitions/dto.SearchFiltersRequest"
                 },
                 "title": {
                     "type": "string",
